# apps/backend/auth-service/src/docs/swagger.json
@@ -214,8 +214,27 @@
 			"get": {
 				"operationId": "LoginWithGoogle",
 				"responses": {
-					"302": {
-						"description": "Redirect"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"type": "string"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
